# doctable

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.py  setup.py
.github/: CODEOWNERS
doctable/: doctable.py  utilities.py
doctable/data_utility/: datatype.py
doctable/streamlit_demo/: app.py
doctable/table_detection/: detect_utils.py  detection.py
doctable/table_recognition/: PPStructure.py  init_args.py  predict_det.py  predict_rec.py  predict_structure.py  predict_system.py  predict_table.py  recognition.py  structure_system.py  utility.py
notebooks/: detection+recognition.ipynb  detection.ipynb  recognition.ipynb
src/: doctable.py
src/data_utility/: datatype.py  utilities.py
src/streamlit_demo/: streamlit_app.py
src/table_detection/: detection.py
src/table_recognition/: PPStructure.py  init_args.py  matcher.py  predict_det.py  predict_rec.py  predict_structure.py  predict_system.py  predict_table.py  recognition.py  structure_system.py
tests/: test_doctable.py
