[tool.poetry]
name = "doctable"
version = "0.1.0"
description = ""
authors = ["enricoGiga <enrico.gigante@gmail.co,>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"
paddlepaddle = "^2.5.2"
shapely = "^2.0.1"
pyclipper = "^1.3.0"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp39-cp39-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.1%2Bcu121-cp39-cp39-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.1%2Bcu121-cp39-cp39-win_amd64.whl"}
opencv-contrib-python = "=4.7.0.72"
opencv-python = "=4.7.0.72"
opencv-python-headless = "=4.7.0.72"
Jupyter = "^1.0.0"
ultralyticsplus="^0.0.28"
ultralytics="^8.0.43"
PyMuPDF = "^1.23.6"
numpy = "^1.26.2"
pillow = "^10.1.0"
sahi = "^0.11.15"
matplotlib = "^3.8.2"
ipython = "^8.18.1"


[tool.poetry.dev-dependencies]
pytest = "^7.4.3"



[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
